@@ -12,6 +12,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [LOG_FORMAT] [HAPROXY] Use correct log-format field for haproxy HTTP path only
 - [PORTAL] [JWT] Correctly write IDP certificate files on system for JWT validation
 - [LOGFWD] [FORM] Avoid KeyError exceptions when updating a LogForwarder
+- [PORTAL] Correctly filter users on Authentication ACLs enabled Workflows for any type of authentication
 
 
 ## [2.30.0] - 2025-09-04
